# uniffi-bindgen-php

./: Cargo.toml  README.md  build.sh  build_bindings.sh
bindgen/: Cargo.toml
bindgen/src/: lib.rs  main.rs
bindgen/src/gen_php/: mod.rs
bindgen/templates/: Types.php  wrapper.php
fixtures/: Cargo.toml
fixtures/loro/: Cargo.toml  build.rs
fixtures/loro/src/: loro.udl
fixtures/src/: lib.rs
