[package]
name = "uniffi-fixture-loro"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_fixture_loro"

[dependencies]
loro-ffi = { git = "https://github.com/loro-dev/loro.git", rev = "d1611d6f83d79152ff1f912b7f31b39875b16015" }
uniffi_macros = {path = "../../3rd-party/uniffi-rs/uniffi_macros"}
uniffi = {path = "../../3rd-party/uniffi-rs/uniffi"}
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = {path = "../../3rd-party/uniffi-rs/uniffi_build"}
uniffi = {path = "../../3rd-party/uniffi-rs/uniffi", features = ["build", "cli"]}
